# pricing_ml

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_JURY_FR.md  ARCHITECTURE_SIMPLE.md  Dockerfile.api  Dockerfile.copilot  Dockerfile.mlflow  Dockerfile.prefect  FEATURE_FILE_MAP.md  README.md  bash.exe.stackdump  docker-compose.yml  dvc.yaml  init-dvc.txt  init-dvc.txt.dvc  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: docker-pricing.yml
app/: Dockerfile  api_pricing.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: dumps_tracking.json
data/raw/: concateneRAHMA4.xlsx.dvc
data/raw/static/: epac_historiquee.csv
data/temp_sqlite/: temp_pricing_eee6d647.db
dvc_flows/pricing_pipeline/: .gitignore  pricing_fully_cleaned.xlsx.dvc
pricing__epac/data/: dumps_tracking.backup  dumps_tracking.json  watcher_metrics.json
pricing__epac/src/: __init__.py
pricing__epac/src/api/: main.py  pricing_controller.py
pricing__epac/src/config/: feature_config.py  mappings.yaml  settings.py
pricing__epac/src/machine_learning/: __init__.py
pricing__epac/src/shared/: __init__.py  logging.py
pricing__epac/src/tests/: __init__.py  requirements-test.txt  (+3 more)
pricing_copilot/: graph.py  interpreter.py  main.py  pricing_backend.py  requirements.txt  schemas.py
pricing_epac/: openssl_patch.py
pricing_epac/flows/: pricing_full_pipeline.py
pricing_epac/preprocessing/: full_preprocess.py
scripts/: consolidate_data.py  watcher.py
src/: main.py
src/api/: pricing_controller.py
src/config/: feature_config.py
src/ml/: model_loader.py  model_registry.py
src/services/: feature_service.py  mlflow_service.py  pricing_service.py
src/utils/: logging_config.py
tests/: conftest.py  requirements-test.txt  test_full_preprocess.py
(+72 files in other folders)
