[tool.poetry]
name = "pricing-epac"
version = "0.1.0"
description = "Pricing project EPAC"
authors = ["Rahma Ben Said <you@pricing_epac.com>"]
readme = "README.md"
homepage = "https://princing_epac.com"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1"
numpy = "^1.26"
scikit-learn = "^1.3"
matplotlib = "^3.8"
statsmodels = "^0.14"
xgboost = "^1.7"
lightgbm = "^4.4"
catboost = "^1.2"
joblib = "^1.3"
mlflow = "^2.9"
prefect = "^2.10"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
dvc = "^3.66.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
