[tool.poetry]
name = "pricing-epac"
version = "0.1.0"
description = "Pricing project EPAC"
authors = ["Rahma Ben Said <you@pricing_epac.com>"]
readme = "README.md"
homepage = "https://princing_epac.com"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1"
numpy = "1.24.3"
scikit-learn = "^1.3"
matplotlib = "^3.8"
statsmodels = "^0.14"
xgboost = "^1.7"
lightgbm = "^4.4"
catboost = "^1.2"
joblib = "^1.3"
mlflow = "^3.10.0"
prefect = "^3.6"
openpyxl = "^3.1.5"
dvc = {extras = ["s3"], version = "^3.66.1"}

cryptography = ">=43.0.0,<47.0.0"  # ← exigé par MLflow
gcsfs = ">=2024.12.0,<2026.2.0"
fastapi = "^0.133.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
uvicorn = "^0.41.0"
watchdog = "^6.0.0"
seaborn = "^0.13.2"
shap = "0.42.1"
duckdb = "^1.4.4"
mysql-connector-python = "^9.6.0"
sqlalchemy = "^2.0.47"
pymysql = "^1.1.2"
boto3 = "1.28.0"
python-dotenv = "^1.2.2"
langchain-openai = "^1.2.1"
langgraph = "^1.1.10"
langchain-google-genai = "^2.1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
dvc = "^3.66.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
